Update projects site 2021-04-03
- Add 2021 logo asset
  - ADD IMAGE logo-thefreeman193-2021-filled-dark.png
- Remove old logo asset
  - DEL IMAGE logo-thefreeman193-675.png
- Update logo to 2021 asset
  - MOD index.htm
- Add experiments page
  - ADD pages/experiments/index.htm
- Add 2015 canvas experiments
  - ADD pages/experiments/canvas/index.htm
  - ADD SCRIPT pages/experiments/canvas/canvas.js
  - ADD STYLE pages/experiments/canvas/canvas.css
- Update stylesheet asset main.css
  - MOD STYLE main.css
- Update gitignore for local management tools
  - MOD OTHER .gitignore

--- a/pages/experiments/index.htm
+++ b/pages/experiments/index.htm
@@ -5,21 +5,21 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="TheFreeman193's Homepage" />
+        <meta name="description" content="Web Experiments by TheFreeman193" />
         <meta name="keywords" content="TheFreeman193, TF193, Development, Software, Programming" />
         <meta name="author" content="Nicholas Bissell (TheFreeman193)" />
         <link rel="stylesheet" type="text/css" href="/assets/style/main.css" />
-        <title>TheFreeman193</title>
+        <title>Web Experiments - TheFreeman193</title>
     </head>
 
     <body>
         <header>
             <div class="topbar-container">
                 <div>
-                    <div class="nameplate"></div>
+                    <a href="file:///D:/Git/thefreeman193.github.io/index.htm" class="growlink"><div class="nameplate"></div></a>
                 </div>
                 <div>
-                    <span class="nameplate-text">TheFreeman193</span>
+                    <a href="file:///D:/Git/thefreeman193.github.io/index.htm" class="growlink whitelink"><span class="nameplate-text">TheFreeman193</span></a>
                 </div>
                 <div>
                     <a rel="external" href="https://www.github.com/TheFreeman193/" class="growlink greenlink spaced">
@@ -48,38 +48,18 @@
                 </div>
             </div>
         </header>
+
         <section class="main-body">
             <div class="title-container" id="titleline-container">
-                <h1><i>Projects</i></h1>
+                <h1><i>Web Experiments</i></h1>
             </div>
             <div class="main-container" id="body-container">
                 <div class="list-container" id="projects-container">
                     <div class="list-item">
-                        <a rel="external" href="https://www.github.com/TheFreeman193/Scripts/">
-                            <img src='/assets/image/icon-github-mark-64px.png' class='logo'>&nbsp;Scripts</a>
-                        <span>&nbsp;a compilation of scripts borne of a programmer's worst enemy and best friend; Laziness.</span>
+                        <a href="/pages/experiments/canvas/index.htm">
+                            <img src="/assets/image/icon-chemistry-flask.svg" class="logo">&nbsp;Canvas Trigonometry (2015)</a>
+                        <span>&nbsp;Experiments with the HTML5 canvas element.</span>
                     </div>
-                    <div class="list-item">
-                        <a rel="external" href="https://thefreeman193.github.io/NordVPN-Servers/">
-                            <img src='/assets/image/icon-github-mark-64px.png'
-                                class='logo'>&nbsp;NordVPN-Servers</a><span>&nbsp;a cross-platform
-                            PowerShell module for interacting with the NordVPN
-                            API</span>
-                    </div>
-                    <div class="list-item">
-                        <a rel="external" href="https://www.github.com/TheFreeman193/script_dump/">
-                            <img src='/assets/image/icon-github-mark-64px.png' class='logo'>&nbsp;Script Dump</a>
-                        <span>&nbsp;unpolished and experimental scripts</span>
-                    </div>
-                    <div class="list-item">
-                        <a href="/pages/experiments/index.htm">
-                            <img src='/assets/image/icon-chemistry-flask.svg' class='logo'>&nbsp;Web Experiments</a>
-                        <span>&nbsp;HTML, CSS3, and JS experiments</span>
-                    </div>
-                </div>
-                <div class="list-container">
-                    <div class="list-item"></div>
-                    <div class="list-item"></div>
                 </div>
             </div>
         </section>
@@ -96,10 +76,5 @@
                 2021.
             </div>
         </footer>
-        <!-- div style="position:fixed; top: 0; left: 0; text-align: center; width: 100%; height: 100%; display:flex; flex-flow:column nowrap; justify-content: center; align-items: center; animation: const-fadeout 5s linear forwards;z-index:-1">
-            <img height="300vw" src="/assets/image/construction.svg" alt='Under Construction' /><br />
-            <span style="font-size: 60px; font-style: italic;">"Construction ongoing"</span>
-        </div -->
     </body>
-
 </html>
