--- a/pages/experiments/index.htm
+++ b/pages/experiments/index.htm
@@ -16,10 +16,10 @@
         <header>
             <div class="topbar-container">
                 <div>
-                    <a href="file:///D:/Git/thefreeman193.github.io/index.htm" class="growlink"><div class="nameplate"></div></a>
+                    <a href="/index.htm" class="growlink"><div class="nameplate"></div></a>
                 </div>
                 <div>
-                    <a href="file:///D:/Git/thefreeman193.github.io/index.htm" class="growlink whitelink"><span class="nameplate-text">TheFreeman193</span></a>
+                    <a href="/index.htm" class="growlink whitelink"><span class="nameplate-text">TheFreeman193</span></a>
                 </div>
                 <div>
                     <a rel="external" href="https://www.github.com/TheFreeman193/" class="growlink greenlink spaced">
