--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,28 @@
+---
+title: TheFreeman193
+layout: default
+---
+
+<meta
+    http-equiv="refresh"
+    content="0; url='https://github.com/TheFreeman193'"
+/>
+
+<p>
+    Redirecting to
+    <a href="https://github.com/TheFreeman193"
+        >https://github.com/TheFreeman193</a
+    >
+</p>
+
+<a
+    rel="me"
+    href="https://fosstodon.org/@nickbiss39"
+    style="opacity: 0; display: none"
+    >Owner on Mastodon</a
+>
+
+<!--
 <!DOCTYPE html>
 <html lang="en">
 
@@ -96,10 +121,11 @@
                 2021.
             </div>
         </footer>
-        <!-- div style="position:fixed; top: 0; left: 0; text-align: center; width: 100%; height: 100%; display:flex; flex-flow:column nowrap; justify-content: center; align-items: center; animation: const-fadeout 5s linear forwards;z-index:-1">
+        <!- div style="position:fixed; top: 0; left: 0; text-align: center; width: 100%; height: 100%; display:flex; flex-flow:column nowrap; justify-content: center; align-items: center; animation: const-fadeout 5s linear forwards;z-index:-1">
             <img height="300vw" src="/assets/image/construction.svg" alt='Under Construction' /><br />
             <span style="font-size: 60px; font-style: italic;">"Construction ongoing"</span>
-        </div -->
+        </div ->
     </body>
 
 </html>
+-->
