--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,10 @@ title: TheFreeman193
 layout: default
 ---
 
+<header>
+    <img class="header-logo" src="{{ '/assets/image/logo-thefreeman193-2021-filled-dark.png' | relative_url }}">
+</header>
+
 <meta
     http-equiv="refresh"
     content="0; url='https://github.com/TheFreeman193'"
