--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,12 @@ layout: default
     style="opacity: 0; display: none"
     >Owner on Mastodon</a
 >
+<a
+    rel="me"
+    href="https://ohai.social/@nickbiss39"
+    style="opacity: 0; display: none"
+    >Owner on Mastodon</a
+>
 
 <!--
 <!DOCTYPE html>
