--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,11 @@ layout: default
     href="https://fosstodon.org/@nickbiss39"
     style="opacity: 0; display: none"
     >Owner on Mastodon</a
+><a
+    rel="me"
+    href="https://fosstodon.org/@thefreeman193"
+    style="opacity: 0; display: none"
+    >Owner on Mastodon</a
 >
 <a
     rel="me"
