--- a/index.htm
+++ b/index.htm
@@ -9,8 +9,12 @@ layout: default
 
 <meta
     http-equiv="refresh"
-    content="0; url='https://github.com/TheFreeman193'"
+    content="2; url='https://github.com/TheFreeman193'"
 />
+
+<script type="text/javascript">
+    window.location.href = 'https://github.com/TheFreeman193'
+</script>
 
 <p>
     Redirecting to
